      if an error log is installed).

    - Extended the metadata tool to permit passing the type name
      directly (e.g., when building a new object, one might need to know
      the allowed subjects before construction).

    - Added a working calendar implementation to the CMFCalendar product,
      which had previously provided only an Event content type.  Thanks to
      Andy Dawkins for the work.

    - Updated FS-based skin methods to read optional '.security files,
      whcih control the role-permission mappings for each skin method.
      See CMFCore/tests/fake_skins/fake_skin/test4.py.security for an
      example.

  Bugs Fixed

    - Removed redundant "Syndication" action from SkinnedFolder; the
      SyndicationTool provides this aciton. (Tracker #481)

    - Updated INSTALL.txt to note the dependency of CMF on the TAL and
      ZTUtils packages and on the PageTemplates product for Zopes < 2.5.
      (Tracker #489).

    - Updated CatalogTool to create a Vocabulary if none present (as
      won't be for catalogs created under Zope 2.6).

    - Adapted interface checks to work with new spellings in Zope 2.6
      (older Zopes should still work).

    - Removed '##bind' headers from FSPythonScripts where they only
      repeat the defaults.

    - Corrected patterns used for "HTML body stripping" to avoid
      HTML embedded within structured text.

    - Fixed computed action of form in 'folder_rename_form' (Tracker #511;
      thanks to "yuppie" for the patch).

    - Improved cacheability of skin images by using absolute URLs.

    - Suppressed repeated load of FSImage content from filesystem
      (should only happen when in debug mode).

    - Repaired skin methods' read of '.properties' files, which hold
      additional metadata about the skin method beyond what can be
      expressed in the body.

    - Updated caching policy manager tool to use correct date format
      (RFC 1123 instead of RFC 822).